studio.topmonks.com/src/stylesheets/main.scss
@import "@material/layout-grid/mdc-layout-grid";

:root {
  --mdc-layout-grid-margin-desktop: 24px;
  --mdc-layout-grid-gutter-desktop: 20px;
  --mdc-layout-grid-column-width-desktop: 60px;
  --tm-primary: #ff7a7e;
  --tm-primary-dark: #ff6165;
  --tm-primary-light: #ff9497;
  --tm-secondary: #6e70fb;
  --tm-secondary-dark: #5558fa;
  --tm-secondary-light: #8788fc;
  --tm-grey: #9b9b9b;
  --tm-grey-light: #dbdbdb;
  --tm-article-background: #f8fbfc;
  --tm-black: #4a4a4a;
}

body {
  background: #ecf6ff url("/images/html_bg.jpg") top center no-repeat;
  background-size: contain;
}

section:target {
  @media screen and (max-width: 479px) {
    margin-top: 96px;
  }
  @media screen and (min-width: 480px) {
    margin-top: 88px;
  }
}

.a11y--hidden {
  // Hides content visually but make it accessible for screen readers.
  position: absolute !important;
  height: 1px;
  width: 1px;
  overflow: hidden;
  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
  clip: rect(1px, 1px, 1px, 1px);
}

.tm-layout-wrapper {
  max-width: 980px;
  margin: 0 auto;
  //padding: 16px;
  --mdc-layout-grid-margin-desktop: 0;
  --mdc-layout-grid-margin-tablet: 0;
  --mdc-layout-grid-margin-phone: 0;
}

.tm-layout-grid__cell--span-0-desktop {
  @media screen and (min-width: 840px) {
    display: none;
  }
}
.white-box {
  background-color: #ffffff;
  padding: 0 24px;
}

.pink-title {
  background-color: var(--tm-primary);
  max-width: 100%;
}

/* BUTTONS */
button {
  cursor: pointer;
}
.button {
  font-size: 1em;
  border-radius: 32px;
  padding: 12px 54px;
  font-weight: 700;
  margin: 1em auto 0;
  color: #ffffff;
  border: 3px solid var(--tm-primary);
  background-color: var(--tm-primary);
  transition: all 0.2s ease-in-out;
  text-transform: uppercase;
  &:hover {
    background-color: #ffffff;
    color: var(--tm-primary);
  }
  &.button--inverse {
    background-color: #ffffff;
    border-color: #ffffff;
    color: var(--tm-primary);
    &:hover {
      color: #ffffff;
      background-color: var(--tm-primary);
      border-color: #ffffff;
    }
  }
  &.button--mail {
    width: 200px;
    padding: 11px 24px;
    border: 2px solid var(--tm-primary);
    color: #ff7a7e;
    background: transparent;
    -webkit-appearance: none;
    margin-top: 0;
    &:hover {
      color: #ffffff;
      background-color: #ff7a7e;
    }
  }
  &.button-fullwidth {
    width: 100%;
  }
}
/* /BUTTONS */

/*Main Info*/
.opening {
  margin: 8em auto 0;
  text-align: center;
  max-width: 600px;
  p {
    color: #4f4f4f;
  }
  .avatar {
    margin-top: 5em;
    background: url("/images/avatar_bg.svg") center no-repeat;
    background-size: 100%;
  }
}

/*Email - Subscribe */
.mail {
  margin: 4em 0;
  label {
    display: block;
    @media screen and (max-width: 840px) {
      text-align: center;
    }
    @media screen and (min-width: 841px) {
      text-align: right;
    }
  }
  input[type="email"] {
    -webkit-appearance: none;
    padding: 11px 24px;
    border-radius: 32px;
    width: 200px;
    border: 1px solid var(--tm-grey-light);
    color: #b0b0b0;
    &:focus {
      padding: 10px 23px;
      border: 2px solid var(--tm-primary);
    }
  }
}

/*Pitch us*/
.pitch-us {
  background: url("/images/pitch-bg.jpg") top no-repeat;
  .white-box {
    --mdc-layout-grid-gutter-desktop: 0;
    --mdc-layout-grid-gutter-tablet: 0;
    --mdc-layout-grid-gutter-phone: 0;
    padding: 0;
    background-color: transparent;
  }
  .pitch-box {
    background-color: #ffffff;
  }
  .box1,
  .box2 {
    border-bottom: 1px solid #d5e9ff;
  }
  .box1,
  .box3 {
    border-right: 1px solid #d5e9ff;
  }
  svg {
    padding: 4.5em 0 0 1.5em;
  }
  .box1 .pitch-us__text,
  .box2 .pitch-us__text {
    padding: 4em 1.5em 1em 2em;
  }
  .box3 .pitch-us__text,
  .box4 .pitch-us__text {
    padding: 1em 1.5em 2em 2em;
  }
  .box3 svg,
  .box4 svg {
    padding-top: 1.5em;
  }
}

/*IDEA*/
.idea {
  background: #fff url("/images/idea-bg.jpg") no-repeat top;
  min-height: 220px;
  margin-top: -2em;
  padding-bottom: 1em;
  .button_transparent a:hover {
    border: 3px solid #fff;
    color: #fff;
  }
  h2 {
    padding-top: 1em;
  }
}

/*Portfolio*/
#portfolio {
  background-color: #ffffff;
  padding-bottom: 4em;
  p {
    font-size: 16px;
    color: #474747;
    text-align: center;
    margin-top: 0;
  }
  .portfolio-logo {
    text-align: center;
  }
}

/*Clients*/
#clients {
  text-align: center;
  background-color: #d7ecff;
  --mdc-layout-grid-gutter-desktop: 0;
  --mdc-layout-grid-gutter-tablet: 0;
  --mdc-layout-grid-gutter-phone: 0;
  img {
    width: 100%;
  }
}

/*Summary*/
#summary {
  padding-top: 2em;
  background-color: #ffffff;
  h3 {
    text-align: center;
    color: #2e2b2c;
    font-size: 28px;
    font-weight: 300;
  }
  p {
    text-align: center;
    margin-top: 3em;
    font-size: 38px;
    font-weight: 700;
    color: white;
  }
  .data_triangle {
    margin: 0 auto;
    background: url("/images/triangle.jpg") center no-repeat;
    background-size: 100%;
    width: 100%;
    height: 240px;
  }
}

/*Network*/
.network {
  background-color: #6e70fb;
  h2 {
    text-align: left;
    margin-bottom: 1.2em;
  }
  p {
    padding: 16px;
    margin: 16px 0;
    min-height: 220px;
  }
  @media screen and (min-width: 841px) {
    svg {
      margin-top: 4em;
      margin-bottom: 3em;
    }
    .network__content {
      position: relative;
    }
    .network__content-box {
      position: absolute;
      z-index: 500;
    }
  }
}

/*Team*/

.team {
  position: relative;

  figure {
    margin: 0;
  }

  .team__photo {
    width: 100%;
  }

  @media screen and (min-width: 841px) {
    .pink-title {
      position: absolute;
      bottom: 0;
      left: 0;
      width: 20%;
    }
  }
}
/* ... */

